--- a/WebMontecastelo/Views/Shared/_Layout.cshtml
+++ b/WebMontecastelo/Views/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-white hover" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white hover" asp-area="" asp-controller="Home" asp-action="Curriculum">Curriculum</a>
+                        </li>
                     </ul>
                 </div>
             </div>
