--- a/WebMontecastelo/Views/Home/Index.cshtml
+++ b/WebMontecastelo/Views/Home/Index.cshtml
@@ -28,17 +28,15 @@
         box-shadow: 1px 1px 50px black;
         backdrop-filter:blur(5px);
     }
-    a{
-        text-decoration: none;
-    }
+
 </style>
 
 <div class="background-container"></div>
 
 <div class="content">
     <div class="text-center">
-        <h1 class="display-4">Welcome to my site</h1>
-        <p>Check my <a href="https://github.com/danimarqz">curriculum vitae</a>.</p>
+        <h1 class="display-4"><strong>Welcome to my site</strong></h1>
+        <p>Check my <a href="home/curriculum">curriculum vitae</a>.</p>
     </div>
 </div>
 
