Correción del botón a cv

--- a/WebMontecastelo/Views/Curriculum/MiCurriculum.cshtml
+++ b/WebMontecastelo/Views/Curriculum/MiCurriculum.cshtml
@@ -74,11 +74,11 @@
 <button id="skill">Relevant Skills</button>
 <div id="hiddenskill" style="display:none">
     <ul>
-        <li>HTML/CSS</li>
-        <li>Java / Python / JavaScrip / C#</li>
+        <li>Java / Python / JavaScript / C#</li>
         <li>Git</li>
         <li>React, Node.js, Django, .Net, Django REST framework</li>
         <li>MS SQL, MySQL</li>
+        <li>HTML / CSS</li>
     </ul>
 </div>
 <button id="softskills">Soft Skills</button>
