--- a/WebMontecastelo/Views/Home/Index.cshtml
+++ b/WebMontecastelo/Views/Home/Index.cshtml
@@ -36,7 +36,7 @@
 <div class="content">
     <div class="text-center">
         <h1 class="display-4"><strong>Welcome to my site</strong></h1>
-        <p>Check my <a href="home/curriculum">curriculum vitae</a>.</p>
+        <p>Check my <a href="/curriculum">curriculum vitae</a>.</p>
     </div>
 </div>
 
