cambios en cv img añadida

--- a/WebMontecastelo/Views/Curriculum/MiCurriculum.cshtml
+++ b/WebMontecastelo/Views/Curriculum/MiCurriculum.cshtml
@@ -32,6 +32,7 @@
 
 <div class="content">
 <h1>Daniel Márquez Bouzo</h1>
+    <img src="https://avatars.githubusercontent.com/u/113545666?v=4" />
 <h2 class="linkedin">Web Developer</h2>
 <div id="cv">
 <button id="work">Work Experience</button>
