--- a/WebMontecastelo/Views/Curriculum/MiCurriculum.cshtml
+++ b/WebMontecastelo/Views/Curriculum/MiCurriculum.cshtml
@@ -26,14 +26,24 @@
         box-shadow: 1px 1px 50px black;
         backdrop-filter: blur(5px);
     }
+    #profilepic{
+        border-radius:50%;
+    }
+    #profilepic:hover{
+        box-shadow: 0 0 5px 1px rgba(0,140,186, 0.5);
+    }
 
 </style>
 <div class="background-container"></div>
 
 <div class="content">
 <h1>Daniel Márquez Bouzo</h1>
-    <img src="https://avatars.githubusercontent.com/u/113545666?v=4" />
+    <img id="profilepic" src="https://avatars.githubusercontent.com/u/113545666?v=4" />
 <h2 class="linkedin">Web Developer</h2>
+    <p>
+        “The most important words a man can say are, "I will do better.”
+        ― Brandon Sanderson, Oathbringer
+    </p>
 <div id="cv">
 <button id="work">Work Experience</button>
 <div id="hiddenwork" style="display:none">
