--- a/WebMontecastelo/Views/Shared/_Layout.cshtml
+++ b/WebMontecastelo/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                             <a class="nav-link text-white hover" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white hover" asp-area="" asp-controller="Curriculum" asp-action="MiCurriculum">Curriculum</a>
+                            <a class="nav-link text-white hover" asp-area="" asp-controller="MiCurriculum" asp-action="MiCurriculum">Curriculum</a>
                         </li>
                     </ul>
                 </div>
