--- a/WebMontecastelo/Views/Shared/_Layout.cshtml
+++ b/WebMontecastelo/Views/Shared/_Layout.cshtml
@@ -29,6 +29,9 @@
                             <a class="nav-link text-white hover" asp-area="" asp-controller="Asignaturas" asp-action="Lista">Asignaturas</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-white hover" asp-area="" asp-controller="Estudiantes" asp-action="Lista">Estudiantes</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-white hover" asp-area="" asp-controller="MiCurriculum" asp-action="MiCurriculum">Curriculum</a>
                         </li>
                     </ul>
