--- a/WebMontecastelo/Views/Shared/_Layout.cshtml
+++ b/WebMontecastelo/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
                             <a class="nav-link text-white hover" asp-area="" asp-controller="Profesores" asp-action="Lista">Profesores</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white hover" asp-area="" asp-controller="MiCurriculum" asp-action="MiCurriculum">Curriculum</a>
+                            <a class="nav-link text-white hover" asp-area="" asp-controller="Login" asp-action="MiCurriculum">Curriculum</a>
                         </li>
                     </ul>
                 </div>
