botón "volver a" arreglado

--- a/WebMontecastelo/Views/Estudiantes/Detalles.cshtml
+++ b/WebMontecastelo/Views/Estudiantes/Detalles.cshtml
@@ -25,7 +25,7 @@
         </div>
         <p class="text-white p-1 pb-3 mt-1 mb-0 bg-black text-center">¡Los mejores estudiantes!</p>
     </div>
-    <a asp-action="Index" class="text-white">
+    <a asp-action="Lista" class="text-white">
         <div class="text-center p-1 m-0" style="background-color:#0c68f0">
             Volver a la lista
         </div>
