--- a/WebMontecastelo/Views/Asignaturas/Detalles.cshtml
+++ b/WebMontecastelo/Views/Asignaturas/Detalles.cshtml
@@ -22,7 +22,7 @@
         </div>
        <p class="text-white p-1 pb-3 mt-1 mb-0 bg-black text-center">¡Aprende todo sobre esta asignatura!</p>
 </div>
-    <a asp-action="Index" class="text-white">
+    <a asp-action="Lista" class="text-white">
         <div class="text-center p-1 m-0" style="background-color:#0c68f0">
             Volver a la lista
         </div>
