--- a/WebMontecastelo/Views/Login/Logueate.cshtml
+++ b/WebMontecastelo/Views/Login/Logueate.cshtml
@@ -7,6 +7,7 @@
         display:flex;
         justify-content:center;
         align-items: center;
+        font-family: Helvetica, sans-serif;
     }
     .contenedor{
         background: #f7f7f7;
@@ -16,7 +17,7 @@
         text-align:center;
         margin:0;
         padding: 1vw;
-        font-family: Arial, Helvetica, sans-serif;
+        
         font-weight:100;
     }
     form{
